# fdsn_agent

./: README.md  fdsn_agent_DOCS.md  pyproject.toml  query.py
src/fdsn_agent/: __init__.py  agent.py  cli.py  config.py  llm.py  parsing.py  prompts.py
src/fdsn_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fdsn_agent/tools/: __init__.py  base.py  dataselect.py  event.py  station.py
tests/: test_agent.py  test_config.py  test_parsing.py  test_tools.py
