[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdsn-agent"
version = "0.1.0"
description = "Headless FDSN seismic archive agent — natural-language queries over any LLM backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["seismology", "fdsn", "obspy", "llm", "earthscope"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Zero required runtime dependencies — stdlib only.
# Optional extras add requests and type stubs.
dependencies = []

[project.optional-dependencies]
requests = ["requests>=2.31"]
dev = [
    "pytest>=8",
    "pytest-cov",
    "responses>=0.25",   # mock HTTP for requests
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.scripts]
fdsn-agent = "fdsn_agent.cli:main"

[project.urls]
Repository = "https://github.com/spara-earthscope/fdsn-agent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
